--- a/website-design.html
+++ b/website-design.html
@@ -134,6 +134,18 @@
         </div>
         <div class="main section">
             <div class="container-1140 padding-top padding-bottom">
+                <h2>Why You Need a Website</h2>
+
+                <p>In today's digital era, having a dynamic online presence is paramount to business success. Despite the numerous marketing methods that are available today, like social media, email marketing, video marketing and so on, your website is the only platform that you truly own and control. Therefore, your website must be at the very core of your marketing efforts. Without a website, your business misses out on many opportunities, resulting in reduced brand awareness, lead generation and sales. In order to maximise the potential of your website, however, it must be designed and developed according to your business goals and requirements. Other considerations, including good user experience, SEO (search engine optimisation) and accessibility are also vital. A <strong>professional web designer</strong> can help you to create a website which conforms to these best practices.</p>
+
+                <p>A website is an essential tool for every small (and large) business nowadays. Here are a few reasons why:</p>
+                    <ul>
+                        <li>Every day, billions of searches are carried out on search engines by people who are looking for businesses like yours. You won't want to miss out on the opportunity to be found through search</li>
+                        <li>Customers are more likely to purchase from a business with a website</li>
+                        <li>A website builds trust and demonstrates credibility</li>
+                        <li>You have full control over the look and feel of your website, unlike your profile on social media platforms.</li>
+                    </ul>
+
                 <h2>The Service</h2>
                 <p>Are you looking for a <strong>web designer</strong> in <strong>Bexley</strong> or other areas within South East London? If so, then you've come to the right place! Your website may be in need of a refresh. Or, perhaps you have little or no online presence and you want to build your first website. Either way, my website design service would be perfect for you.</p>
 
@@ -141,25 +153,16 @@
                 <ul>
                     <li>Your website's design will be unique - it won't look like the many other websites that exist on the internet</li>
                     <li>You won't pay the extortionate fees that agencies charge</li>
-                    <li>I'll communicate with you regularly to keep you updated on my progress</li>
+                    <li>I'll communicate with you regularly to keep you updated on my progress.</li>
                 </ul>
 
                 <h2>The Process</h2>
-                <p>Your requirements will be gathered and we will work together to create a design for your new website. It helps if you have an idea of the colours, fonts, look and feel of the site and content, but if not, don't worry! I will take you through the process of creating suitable designs that reflect your business's values. I will present the website designs to you either via a Figma link, or I will send you the JPEG images attached to an email. Once you are happy with the designs, I will proceed to the next step of building your website on your chosen platform (Wix, WordPress or Shopify). For more information about the web design process, please refer to my blog post, <a href="https://sybiltec.com/web-design-process-explained-12-easy-steps">The Web Design Process Explained in 12 Easy Steps</a>.</p>
+                <p>Firstly, your requirements will be gathered. This is a very important step in the process, as it helps me (and you) to understand your business goals and what you hope to achieve by building a website. By working on this step together, I can create a stategy which best meets your needs.</p>
 
-                <h2>Why You Need a Website</h2>
-
-                <p>A website is an essential tool for every small (and large) business nowadays. Here are a few reasons why:</p>
-                    <ul>
-                        <li>Every day, billions of searches are carried out on search engines by people who are looking for businesses like yours. You won't want to miss out on the opportunity to be found on search</li>
-                        <li>Customers are more likely to purchase from a business with a website</li>
-                        <li>A website builds trust and demonstrates credibility</li>
-                        <li>You have full control over the look and feel of your website, unlike your profile on social media platforms.</li>
-                    </ul>
-
-                <p>Take a look at the examples below of websites I have designed for past clients.</p>
+                <p>We will work together to create a design for your new website. It helps if you have an idea of the colours, fonts, look and feel of the site and content, but if not, don't worry! I will take you through the process of creating suitable designs that reflect your business's values. I will present the website designs to you via a <a href="https://www.figma.com/" target="_blank" rel="noopener noreferrer">Figma</a> link - this is a prototype which you can interact with, and which looks similar to the actual website to be developed. Once you are happy with the designs, I will proceed to the next step of building your website on your chosen platform (Wix, WordPress or Shopify). For more information about the web design process, please refer to my blog post, <a href="https://sybiltec.com/web-design-process-explained-12-easy-steps">The Web Design Process Explained in 12 Easy Steps</a>.</p>
 
                 <h2>Web Design Clients</h2>
+                <p>Take a look at the examples below of websites I have designed for past clients. All of these clients benefitted from a bespoke website design which allowed the businesses to showcase their products and services at their best.</p>
 
                 <div id="new-haw-community-centre" class="shadow-box-2">                         
                     <div class="row-2">
