--- a/services.html
+++ b/services.html
@@ -12,11 +12,11 @@
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Services | Web Design Erith, Bexley, South East London | Sybiltec</title>       
+        <title>Services | Freelance Web Designer South East London | Sybiltec</title>       
         <meta name="Description" content="Sybiltec provides a range of services, including bespoke web design and build, e-commerce websites and website maintenance. Contact me today for a quote.">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Contact | Web Design Erith, Bexley, South East London | Sybiltec" />
+        <meta property="og:title" content="Services | Freelance Web Designer South East London | Sybiltec" />
         <meta property="og:description" content="Sybiltec provides a range of services, including bespoke web design and build, e-commerce websites and website maintenance. Contact me today for a quote." />
         <meta property="og:url" content="https://sybiltec.com/services" />
         <meta property="og:site_name" content="Sybiltec" />
