Add TB back to homepage

--- a/index.html
+++ b/index.html
@@ -393,19 +393,20 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-4">  
                         <div class="blog-card">   
-                            <a href="https://sybiltec.com/building-online-store-using-shopify"><img src="images/shopify-logo-window-with-plant-350x183.jpg" 
-                                alt="Shopify logo in window with plant"></a>     
-                            <div class="blog-card-text">           
-                                <h3>Free Webinar: Building an Online Store Using Shopify</h3>
-                                <p>13 February 2024</p>
-                                <p>Looking to sell products online? Join our free webinar, in association with CNT Associates, to learn how to build an online store with Shopify.</p>
+                            <a href="https://sybiltec.com/bexley-talking-business">
+                                <img src="images/logos/TB-Business-Support.png" 
+                                alt="Bexley Talking Business - Business Support"></a>
+                            <div class="blog-card-text">                    
+                                <h3>Bexley Talking Business</h3>
+                                <p>14 December 2023</p>
+                                <p>If you are an SME/sole trader based in Bexley, you may be eligible for free business support. Start your registration now.</p>
                                 <div class="padding-bottom padding-top">
-                                    <a class="btn-primary" href="https://sybiltec.com/building-online-store-using-shopify">Register Now</a>   
+                                    <a class="btn-primary" href="https://sybiltec.com/bexley-talking-business">Get Business Support</a>   
                                 </div>
                             </div>
-                        </div> 
+                        </div>
                     </div>
                 </div>
             </div>
