Update logos on clients.html

--- a/clients.html
+++ b/clients.html
@@ -206,31 +206,37 @@
                     <div class="row center" style="padding:0">                        
                         <div class="col-3" style="padding:0"><img src="images/logos/cnt-associates-2.png" alt="CNT Associates"></div>
                         <div class="col-3" style="padding:0"><img src="images/logos/crazy-thumbs.png" alt="Crazy Thumbs"></div>
-                        <div class="col-3" style="padding:0"><img src="images/logos/emrys-consulting.svg" alt="Emrys Consulting"></div>
-                        <div class="col-3" style="padding:0"><img src="images/logos/encalife.png" alt="encalife logo"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/eat-club.png" alt="Eat Club"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/emrys-consulting.svg" alt="Emrys Consulting"></div>                       
                     </div>
                     <div class="row center" style="padding:0">                                                
+                        <div class="col-3" style="padding:0"><img src="images/logos/encalife.png" alt="Encalife"></div>
                         <div class="col-3" style="padding:0"><img src="images/logos/esme-learning.png" alt="Esme Learning"></div>
                         <div class="col-3" style="padding:0"><img src="images/logos/events-meets-world.png" alt="Events Meets World"></div>
-                        <div class="col-3" style="padding:0"><img src="images/logos/find-the-balance.png" alt="Find the Balance"></div>
                         <div class="col-3" style="padding:0"><img src="images/logos/future-communities.png" alt="Future Communities"></div>
                     </div>
                     <div class="row center" style="padding:0">                                               
                         <div class="col-3" style="padding:0"><img src="images/logos/the-gdpr-compliance-consultancy.png" alt="The GDPR Compliance Consultancy"></div>
-                        <div class="col-3" style="padding:0"><img src="images/logos/gll.png" alt="GLL logo"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/gll.png" alt="GLL Greenwich Leisure Limited"></div>
                         <div class="col-3" style="padding:0"><img src="images/logos/global-banking-school.png" alt="Global Banking School"></div>
                         <div class="col-3" style="padding:0"><img src="images/logos/happily-clappily-ever-laughter.png" alt="Happily Clappily Ever Laughter"></div>
                     </div>
                     <div class="row center" style="padding:0">                                                
-                        <div class="col-3" style="padding:0"><img src="images/logos/jenup.png" alt="JenUp logo"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/jenup.png" alt="JenUp"></div>
                         <div class="col-3" style="padding:0"><img src="images/logos/Kiko-by-Astons-of-London.svg" alt="Kiko by Astons of London"></div>
-                        <div class="col-3" style="padding:0"><img src="images/logos/meitam-london.png" alt="Meitam London"></div>
-                        <div class="col-3" style="padding:0"><img src="images/logos/nerowireart-2.png" alt="NeroWireArt logo"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/krach-institute-for-tech-diplomacy-at-purdue.png" alt="Krach Institute for Tech Diplomacy at Purdue"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/lcg-lift-consultancy.png" alt="LCG Lift Consultancy"></div>                       
                     </div>
                     <div class="row center" style="padding:0">                        
-                        <div class="col-3" style="padding:0"><img src="images/logos/new-haw-community-centre.png" alt="New Haw Community Centre"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/ld-tiling-contractors-ltd.png" alt="LD Tiling Contractors Ltd"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/meitam-london.png" alt="Meitam London"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/nerowireart-2.png" alt="NeroWireArt"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/new-haw-community-centre.png" alt="New Haw Community Centre"></div>                       
+                    </div>
+                    <div class="row center" style="padding:0"> 
                         <div class="col-3" style="padding:0"><img src="images/logos/pathways-21.png" alt="Pathways 21"></div>
                         <div class="col-3" style="padding:0"><img src="images/logos/together-matters.png" alt="Together Matters"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/wan-and-co.png" alt="Wan&Co"></div>
                         <div class="col-3" style="padding:0"><img src="images/logos/wardells-wardrobe.png" alt="Wardell's Wardrobe"></div>
                     </div>
             </div>
