Update index.html and CSS

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <div class="row">
                     <div class="col-8">
                         <h1>Web Design for the Serious Business Owner</h1>
-                        <h2  class="padding-bottom" style="color: #ffffff; font-size: 18px">A freelance web designer supporting SMEs in South East London</h2>
+                        <h2  class="padding-bottom" style="color: #ffffff; font-size: 18px">A freelance web designer supporting small businesses in South East London</h2>
                         <a id="btn-contact" class="btn-primary" href="https://sybiltec.com/contact">Contact Me</a>
                     </div>
                     <div class="col-4">
@@ -153,9 +153,25 @@
         </div>
         <div class="services section">
             <div class="container-1140">
+                <div class="row">
+                    <div class="col-6"><h2>Your Website Worries - Sorted!</h2>
+                        <p>Website problems - we all have them. As a <strong>small business owner</strong>, it's likely that you've faced one or more of these issues at some stage during the development of your online presence. Here is a list of recent website problems that my clients have complained about; if you can relate to any of these, get in touch with me today to discuss the best solution for you.</p>
+                        <div class="padding-top"><a id="btn-contact" class="btn-primary" href="https://sybiltec.com/contact">Contact Me</a></div>
+                    </div>
+                    <div class="col-6">
+                        <ul class="fa-ul">
+                            <li><span class="fa-li"><i class="fa-solid fa-circle-xmark smalli"></i></span></i><em>My web designer is too distant and extremely slow to respond. Even the smallest requests take ages to implement. I need someone with good communication who I can trust to get the job done quickly.</em></li>
+                            <li><span class="fa-li"><i class="fa-solid fa-circle-xmark smalli"></i></span><em>I run my business on a very limited online presence. I need a website to expand my online presence beyond Facebook and Instagram.</em></li>
+                            <li><span class="fa-li"><i class="fa-solid fa-circle-xmark smalli"></i></span><em>Our website hasn't been updated for over 10 years. It is built upon a very outdated technology. Upgrading to WordPress would allow us to build a website with a bespoke design that reflects our brand.</em></li>
+                            <li><span class="fa-li"><i class="fa-solid fa-circle-xmark smalli"></i></span><em>Out editing capabilities are very restricted. Any major changes to our website require the services of a web developer, and we are charged for every edit. We need a platform that allows us to make the changes ourselves.</em></li>
+                            <li><span class="fa-li"><i class="fa-solid fa-circle-xmark smalli"></i></span><em>Our eBay shop is becoming increasingly expensive to run and we are bound by their terms and conditions. A system like Shopify would be more cost effective and allow us full control over the look and feel of our store, as well as how we manage the customer experience.</em></li>
+                        </ul>
+                    </div>
+                </div>
+
                 <h2 class="center">Website Services</h2>
                 <hr>
-                <p class="center">Whether you're looking for help with setting up a website for the first time, or you have an existing site that you want to optimise, I offer a service that's right for you.</p>
+                <p class="center">Whether you're looking for help with setting up a website for the first time, or you have an existing site that you want to optimise, I offer a service that's right for you. You'll benefit from an affordable and personalised service - no agencies or project managers to deal with - plus a website that you'll be proud of.</p>
 
                 <div class="row">
                     <div class="col-4">
@@ -262,6 +278,7 @@
                 <p class="center"><i class="fa-regular fa-comments"></i></p>
                 <h2 class="center">My Happy Clients!</h2>
                 <hr>
+                <p class="center">See the testimonials below to read about my clients' experience of working with me as their web designer. All customers are delighted with my services; as a result, many choose me to be their trusted partner for working together on a long-term basis.</p>
                 <!-- Slideshow container -->
                 <div class="slideshow-container">
                     <!-- Full-width slides/quotes -->
@@ -361,7 +378,7 @@
                 <div class="center">
                     <h2>Blog</h2>
                     <hr>
-                    <p>Read my latest blog posts.</p>
+                    <p>Read my selection of blog posts for web design tips and advice, guides to help you make the most of your website, and the latest news from Sybiltec.</p>
                 </div>
                 <div class="row">
                     <div class="col-4">          
