--- a/blog.html
+++ b/blog.html
@@ -134,10 +134,16 @@
         </div>
         <div class="main section">
             <div class="container-1140">
-                <h2>Accessible Design: Creating an Inclusive Website</h2>
-                <p>Designing an accessible website means creating web content that's usable for all types of users, including those with impairments and disabilities. Read the article for simple tips on how to make your website more accessible …</p>
-                <br>
+                <h2>8 Ways to Improve the UX (User Experience) of Your Website</h2>
+                    <p>User experience (or UX) is all about how your website visitors feel when they are browsing your website. Is it a positive or negative experience? Do they feel happy and satisfied, or angry and frustrated? Read the article for 8 ways to improve your website's user experience. …</p>
+                    <br>
+                    <a class="btn-primary" href="https://sybiltec.com/user-experience-ux">Improve My UX</a>
+                <div class="padding-top">
+                    <h2>Accessible Design: Creating an Inclusive Website</h2>
+                    <p>Designing an accessible website means creating web content that's usable for all types of users, including those with impairments and disabilities. Read the article for simple tips on how to make your website more accessible …</p>
+                    <br>
                     <a class="btn-primary" href="https://sybiltec.com/accessible-website-design">Accessible Website Design</a>
+                </div>
                 <div class="padding-top">
                     <h2>How to Use Google Search Console: a Quick Guide</h2>
                     <p>Improving your website's SEO begins with understanding the search performace of your site. Read this guide on how to create a property, view your metrics, fix page indexing issues and more. …</p>
