--- a/index.html
+++ b/index.html
@@ -381,6 +381,19 @@
                     <p>Read my selection of blog posts for web design tips and advice, guides to help you make the most of your website, and the latest news from Sybiltec.</p>
                 </div>
                 <div class="row">
+                    <div class="col-4">  
+                        <div class="blog-card">   
+                            <a href="https://sybiltec.com/user-experience-ux"><img src="images/white-and-black-laptop-400x209.jpg" alt="White and black laptop"></a>
+                                <div class="blog-card-text">                      
+                                <h3>How to Improve the User Experience of Your Website</h3>
+                                <p>19 March 2024</p>
+                                <p>Good user experience is paramount to your website's success. Read the article for tips on how to improve your website's UX.</p>
+                                <div class="padding-bottom padding-top">
+                                    <a class="btn-primary" href="https://sybiltec.com/user-experience-ux">Improve My UX</a>   
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-4">          
                         <div class="blog-card">
                             <a href="https://sybiltec.com/accessible-website-design"><img src="images/disabled-parking-350x183.jpg" 
@@ -391,21 +404,6 @@
                                 <p>Read the article for an introduction to accessibility and quick tips on how to create a website that caters to users with impairments and disabilities.</p>
                                 <div class="padding-bottom padding-top">
                                     <a class="btn-primary" href="https://sybiltec.com/accessible-website-design">Accessible Design</a>   
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-4">  
-                        <div class="blog-card">   
-                            <a href="https://sybiltec.com/google-search-console">
-                                <img src="images/google-search-console-350x183.jpg" 
-                                alt="Tired Young Female Employee Feeling Stressed, Headache, and Burnout from Computer Work"></a>
-                            <div class="blog-card-text">                    
-                                <h3>Using Google Search Console: a Quick Guide</h3>
-                                <p>10 March 2024</p>
-                                <p>Google Search Console is an essential tool for improving your website's SEO. Read the article for a quick guide to getting started.</p>
-                                <div class="padding-bottom padding-top">
-                                    <a class="btn-primary" href="https://sybiltec.com/google-search-console">Read the Guide</a>   
                                 </div>
                             </div>
                         </div>
