Remove Bexley from page titles

--- a/blog-3.html
+++ b/blog-3.html
@@ -12,7 +12,7 @@
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Blog Page 3 | Web Designer in Bexley, South East London</title>       
+        <title>Blog Page 3 | Web Designer in South East London</title>       
         <meta name="Description" content="Sybiltec is a freelance web designer supporting small business owners in South East London. Read my articles for tips and advice on web design issues.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/blog-3">
