--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Blog | Web Designer Erith Bexley South East London | Sybiltec</title>       
+        <title>Blog | Web Designer Erith South East London | Sybiltec</title>       
         <meta name="Description" content="Sybiltec provides website design services in the South East London areaa. Read my blog posts to keep yourself updated with industry news and company updates.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/blog">
