--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Contact | Web Design Erith, Bexley, South East London | Sybiltec</title>       
+        <title>Contact | Web Design Erith, South East London | Sybiltec</title>       
         <meta name="Description" content="Providing web design services in Erith, Bexley and South East London. Shopify, WordPress and Wix. Contact me for a free consultation or website review.">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
