--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Projects | Web Design Erith Bexley South East London | Sybiltec</title>    
+        <title>Projects | Web Design Erith South East London | Sybiltec</title>    
         <meta name="Description" content="Sybil Mayard has worked on a range of personal projects outside of her web design business. Learn more about VidCareer, Android Poker App and TagNav.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
