--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>About | Web Designer Erith Bexley South East London | Sybiltec</title>       
+        <title>About | Web Designer Erith South East London | Sybiltec</title>       
         <meta name="Description" content="Sybil Mayard is a freelance web developer. She graduated 
         from the University of Kent with an MSc in Computer Science. Read about her experiences here.">
         <meta name="robots" content="all">
