--- a/clients.html
+++ b/clients.html
@@ -12,7 +12,7 @@
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Clients | Web Designer Erith Bexley South East London | Sybiltec</title>       
+        <title>Clients | Web Designer Erith South East London | Sybiltec</title>       
         <meta name="Description" content="Sybil Mayard has worked with a range of clients, providing the services needed to help them achieve their business goals. See a selection of clients here.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
