--- a/ecommerce-websites.html
+++ b/ecommerce-websites.html
@@ -12,7 +12,7 @@
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>E-commerce Websites | Erith Bexley South East London | Sybiltec</title>       
+        <title>E-commerce Websites | Erith South East London | Sybiltec</title>       
         <meta name="Description" content="An e-commerce website is required for selling products and/or services online. Contact me for an online store built on WooCommerce or Shopify.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/ecommerce-websites">
