--- a/faqs.html
+++ b/faqs.html
@@ -176,7 +176,7 @@
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>FAQs | Web Designer Erith Bexley South East London | Sybiltec</title>       
+        <title>FAQs | Web Designer Erith South East London | Sybiltec</title>       
         <meta name="Description" content="Sybil Mayard provides website design and development services for small businesses. Find the answers to your frequently asked questions (FAQs) here.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/faqs">
