--- a/ecommerce-websites.html
+++ b/ecommerce-websites.html
@@ -157,7 +157,7 @@
 
                 <h2>Who This Service Suitable is For</h2>
 
-                <p>If you are a business owner who sells or is planning to sell products and/or services on your website, then my e-commerce service would be perfect for you. If you need a website but do not plan to sell online, please see my Small Business Website service instead.</p>
+                <p>If you are a business owner who sells or is planning to sell products and/or services on your website, then my e-commerce service would be perfect for you. If you need a website but do not plan to sell online, please see my <a href="https://sybiltec.com/website-design">Small Business Website</a> service instead.</p>
 
                 <h2>What the Process Involves</h2>
 
