Correct errors with UX blog

--- a/user-experience-ux.html
+++ b/user-experience-ux.html
@@ -242,7 +242,7 @@
 
                 <h2>Conclusion</h2>
 
-                <p>User experience is a very important aspect of website design. Your website visitors must be given the best possible experience when browsing your website, in order to keep engagement high and bounce rates low. In this article, I discussed tips and advice on how to improve your website's user experience. If you need support with this area, please feel free to <a href="info@sybiltec.com" target="_blank">contact me</a>.</p>
+                <p>User experience is a very important aspect of website design. Your website visitors must be given the best possible experience when browsing your website, in order to keep engagement high and bounce rates low. In this article, I discussed tips and advice on how to improve your website's user experience. If you need support with this area, please feel free to <a href="mailto:info@sybiltec.com" target="_blank">contact me</a>.</p>
 
             </div>
         </div>
