Minor SEO improvements

--- a/backup-wordpress-website-using-updraftplus.html
+++ b/backup-wordpress-website-using-updraftplus.html
@@ -24,12 +24,12 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>How to Backup Your WordPress Site with UpdraftPlus | Sybiltec</title>       
-        <meta name="Description" content="Regularly backing up your WordPress site is an essential website maintenance activity. Read this article to learn how to use the UpdraftPlus plugin for making a backup.">
+        <meta name="Description" content="Backing up your WordPress site is an essential website maintenance task. Read this article to learn how to use UpdraftPlus for making backups.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="How to Backup Your WordPress Site with UpdraftPlus | Sybiltec" />
-        <meta property="og:description" content="Regularly backing up your WordPress site is an essential website maintenance activity. Read this article to learn how to use the UpdraftPlus plugin for making a backup." />
+        <meta property="og:description" content="Backing up your WordPress site is an essential website maintenance task. Read this article to learn how to use UpdraftPlus for making backups.." />
         <meta property="og:url" content="https://sybiltec.com/backup-wordpress-website-using-updraftplus" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/business-woman-who-is-stressed-and-frustrated-1920x1280.jpg" />
