--- a/clients.html
+++ b/clients.html
@@ -140,7 +140,7 @@
                 <div id="cnt-associates" class="shadow-box">
                     <div class="row">
                         <div class="col-4">
-                            <img src="images/clients/CNT-Associates-2.jpg">
+                            <img src="images/clients/CNT-Associates-2.jpg" alt="CNT Associates website">
                         </div>
                         <div class="col-8">
                             <h3>CNT Associates</h3>
@@ -178,7 +178,7 @@
                     <div id="happily-clappily-ever-laughter" class="shadow-box">
                         <div class="row">
                             <div class="col-4">
-                                <img src="images/clients/Happily-Clappily-Ever-Laughter-2.jpg">
+                                <img src="images/clients/Happily-Clappily-Ever-Laughter-2.jpg" alt="Happily Clappily Ever Laughter website">
                             </div>
                             <div class="col-8">
                                 <h3>Happily Clappily Ever Laughter</h3>
