Add Pinterest link

--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -264,6 +264,8 @@
                                 <i class="fa-brands fa-linkedin"></i></a>
                             <a href="https://instagram.com/sybiltec/" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-instagram"></i></a>
+                            <a href="https://www.pinterest.co.uk/sybiltec/" target="_blank" rel="noopener noreferrer">
+                                <i class="fa-brands fa-pinterest"></i></a>
 			                <a href="https://www.youtube.com/@sybiltec" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-youtube"></i></a>
                         </p>
