Add email address and Facebook icon

--- a/common-website-mistakes.html
+++ b/common-website-mistakes.html
@@ -258,14 +258,16 @@
                     <div class="col-3">
                         <h4>Get in Touch</h4>
                         <p>
-                            <a href="mailto:info@sybiltec.com?subject=Website Enquiry"><i class="far fa-envelope"></i></a>
+                            <p><a href="mailto:info@sybiltec.com?subject=Website Enquiry">info@sybiltec.com</a></p>
                             <a href="https://www.linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-linkedin"></i></a>
                             <a href="https://instagram.com/sybiltec/" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-instagram"></i></a>
                             <a href="https://www.pinterest.co.uk/sybiltec/" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-pinterest"></i></a>
-			                <a href="https://www.youtube.com/@sybiltec" target="_blank" rel="noopener noreferrer">
+			                <a href="https://www.facebook.com/sybiltec" target="_blank" rel="noopener noreferrer">
+                                <i class="fa-brands fa-facebook"></i></a>
+                            <a href="https://www.youtube.com/@sybiltec" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-youtube"></i></a>
                         </p>
                         <p>
