--- a/index.html
+++ b/index.html
@@ -456,31 +456,6 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="certifications section">
-            <div class="container-1140">
-                <h2>Certifications</h2>
-                <hr>
-                <div class="row">
-                    <div class="col-4">
-                        <h4>Google Digital Garage Certified</h4>
-                            <img src="https://sybiltec.com/images/certifications/sybil-mayard-google-digital-garage-fundamentals-of-digital-marketing-thumbnail.png"
-                                alt="Google Digital Garage The Fundamentals of Digital Marketing certificate">
-                    </div>
-                    <div class="col-4">
-                    <h4>Yoast Academy Certified</h4>
-                    <a href="https://academy.yoast.com/certificate/2558/668718/ecee89c40963da4261cb749c95b38b68/1/" 
-                        target="_blank" rel="noopener noreferrer">
-                        <img src="https://sybiltec.com/images/certifications/sybil-mayard-yoast-for-beginners-certificate.png"
-                            alt="Yoast for Beginners certificate"></a>
-                    </div>
-                    <div class="col-4">
-                        <h4>The Complete 2022 Software Testing Bootcamp</h4>
-                            <img src="https://sybiltec.com/images/certifications/udemy-the-complete-2022-software-testing-bootcamp.jpeg"
-                                alt="Udemy The Complete 2022 Software Testing Bootcamp">
-                    </div>
-                </div>
-            </div>
-        </div> -->
         <div id="map"></div>
         <div class="contact section">
             <div class="container-1140">
@@ -528,14 +503,16 @@
                     <div class="col-3">
                         <h4>Get in Touch</h4>
                         <p>
-                            <a href="mailto:info@sybiltec.com?subject=Website Enquiry"><i class="far fa-envelope"></i></a>
+                            <p><a href="mailto:info@sybiltec.com?subject=Website Enquiry">info@sybiltec.com</a></p>
                             <a href="https://www.linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-linkedin"></i></a>
                             <a href="https://instagram.com/sybiltec/" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-instagram"></i></a>
                             <a href="https://www.pinterest.co.uk/sybiltec/" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-pinterest"></i></a>
-			                <a href="https://www.youtube.com/@sybiltec" target="_blank" rel="noopener noreferrer">
+			                <a href="https://www.facebook.com/sybiltec" target="_blank" rel="noopener noreferrer">
+                                <i class="fa-brands fa-facebook"></i></a>
+                            <a href="https://www.youtube.com/@sybiltec" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-youtube"></i></a>
                         </p>
                         <p>
